# subhajitbhar.com

./: .gitignore  404.html  README.md  ads.txt  index.html  justfile  llm.txt  llms.txt  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: publish.yaml
blogs/: index.html
blogs/On-Page-SEO-vs-Off-Page-SEO/: index.html
blogs/api-101-beginner-guide/: index.html
blogs/detect-remove-outliers-python-iqr-zscore/: index.html
blogs/difference-reshape-flatten-numpy/: index.html
blogs/does-langchain-use-rag/: index.html
blogs/git-101-cheat-sheet/: index.html
blogs/lightrag-bm25-hybrid-search/: index.html
blogs/lightrag-fast-retrieval-augmented-generation/: index.html
blogs/lightrag-langchain-retriever-integration/: index.html
blogs/modern-ci-pipeline/: index.html
blogs/nlp-document-summarization-eval/: index.html
blogs/nlp-entity-matching-with-fuzzy-search/: index.html
blogs/pandas-missing-values/: index.html
blogs/rag-for-knowledge-intensive-nlp-tasks/: index.html
blogs/ruff-modern-linter/: index.html
blogs/secure-scalable-apis-guide/: index.html
blogs/system-architecture-comprehensive-guide/: index.html
blogs/tags/: index.html
blogs/version-control-git-github/: index.html
docs/: .meta.yml  CNAME  index.md  llm.txt  robots.txt  tags.md  testimonials.md
docs/about/: index.md
docs/blog/: .authors.yml
hooks/: sitemap_extras.py  socialmedia.py
overrides/: blog-category.html  main.html
partials/: footer.html.back
projects/: index.html
search/: search_index.json
tags/: index.html
testimonials/: index.html
(+60 files in other folders)
